--- a/src/pages/page.module.css
+++ b/src/pages/page.module.css
@@ -1,6 +1,6 @@
 .container {
     display: flex;
     flex-direction: row;
-    min-width: 100%;
+    flex-grow: 1;
     justify-content: space-between;
 }
